# pytseg

./: LICENSE  README.rst  setup.cfg
.github/workflows/: tests.yml
demos/: demo-1.ipynb  demo-2.ipynb
docs/: requirements.txt
docs/source/: conf.py  pytseg.rst
src/pytseg/: __init__.py  data.py  demo-1.ipynb  demo-2.ipynb  plot.py  seg.py  seg_multi.py
src/pytseg/.ipynb_checkpoints/: test-checkpoint.ipynb
tests/: test_pytseq.py
