##########################
# Setup.py Configuration #
##########################

[metadata]
name = pytseg
version = 0.1
description = Tiny toolbox for time series segmentation
long_description = file: README.rst
long_description_content_type = text/x-rst

# URLs associated with the project
url = https://github.com/RaoulHeese/pytseq
download_url = https://github.com/RaoulHeese/pytseq/releases
project_urls =
    Bug Tracker = https://github.com/RaoulHeese/pytseq/issues
    Source Code = https://github.com/RaoulHeese/pytseq
	
# Author information
author = Raoul Heese
author_email = raoul.heese@gmail.com
maintainer = Raoul Heese
maintainer_email = raoul.heese@gmail.com

# License information
license = MIT
license_files = LICENSE

classifiers =
    License :: OSI Approved :: MIT License
    Intended Audience :: Science/Research

[options]
install_requires =
	numpy
	scipy
	scikit-learn
	matplotlib
	typing

packages = find:
package_dir =
    = src

[options.packages.find]
where = src